[Media|OMX]  * OMX Core & Stagerighthw   - Fixed Deinit() symbol matching bug.   - Change Component Find Method for Lollipop CTS.  * Video Decoder Component   - Add Out video validity flag

--- a/omx/OMX_MSVC_Project/OMX_MSVC_Project.vcxproj
+++ b/omx/OMX_MSVC_Project/OMX_MSVC_Project.vcxproj
@@ -36,10 +36,12 @@
     <ClCompile Include="..\components\video\coda960_video_decoder\NX_AVCUtil.c" />
     <ClCompile Include="..\components\video\coda960_video_decoder\NX_DecoderUtil.c" />
     <ClCompile Include="..\components\video\coda960_video_decoder\NX_Div3Decoder.c" />
+    <ClCompile Include="..\components\video\coda960_video_decoder\NX_MPEG2Decoder.c" />
     <ClCompile Include="..\components\video\coda960_video_decoder\NX_MPEG4Decoder.c" />
     <ClCompile Include="..\components\video\coda960_video_decoder\NX_OMXVideoDecoder.c" />
     <ClCompile Include="..\components\video\coda960_video_decoder\NX_RVDecoder.c" />
     <ClCompile Include="..\components\video\coda960_video_decoder\NX_VC1Decoder.c" />
+    <ClCompile Include="..\components\video\coda960_video_decoder\NX_VP8Decoder.c" />
     <ClCompile Include="..\components\video\coda960_video_encoder\NX_OMXVideoEncoder.c" />
     <ClCompile Include="..\core\NX_OMXCore.c" />
     <ClCompile Include="..\extractor\ffmpeg\FFmpegExtractor.cpp" />
@@ -123,6 +125,7 @@
     <ReferencePath />
     <LibraryPath />
     <SourcePath />
+    <LibraryWPath />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ExcludePath />
@@ -131,6 +134,7 @@
     <ReferencePath />
     <LibraryPath />
     <SourcePath />
+    <LibraryWPath />
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -139,7 +143,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../include;../../include;../core/inc;../../../../../linux/pyrope/library/include;../components/base/;../components/video/coda960_video_decoder;../components/video/coda960_video_encoder;../../../../../system/core/include;../../../../../hardware/libhardware/include;../extractor/ffmpeg;../codec/ffmpeg/include;../../../../../frameworks/av/include;../../../../../frameworks/av/media/libstagefright/include;../../../../../frameworks/native/include;../../../../../frameworks/native/include/media/hardware;../../../../../frameworks/native/include/media/openmax;../../../../../prebuilts/gcc/linux-x86/host/i686-linux-glibc2.7-4.6/sysroot/usr/include;$(ANDROID_INCS)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../include;../../include;../core/inc;../../../../../linux/pyrope/library/include;../components/base/;../components/video/coda960_video_decoder;../components/video/coda960_video_encoder;../../../../../system/core/include;../../../../../hardware/libhardware/include;../extractor/ffmpeg;../codec/ffmpeg/include;../../../../../frameworks/av/include;../../../../../frameworks/av/media/libstagefright/include;../../../../../frameworks/native/include;../../../../../frameworks/native/include/media/hardware;../../../../../frameworks/native/include/media/openmax;$(ANDROID_INCS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -155,7 +159,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../include;../../include;../core/inc;../../../../../linux/pyrope/library/include;../components/base/;../components/video/coda960_video_decoder;../components/video/coda960_video_encoder;../../../../../system/core/include;../../../../../hardware/libhardware/include;../extractor/ffmpeg;../codec/ffmpeg/include;../../../../../frameworks/av/include;../../../../../frameworks/av/media/libstagefright/include;../../../../../frameworks/native/include;../../../../../frameworks/native/include/media/hardware;../../../../../frameworks/native/include/media/openmax;../../../../../prebuilts/gcc/linux-x86/host/i686-linux-glibc2.7-4.6/sysroot/usr/include;$(ANDROID_INCS)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../include;../../include;../core/inc;../../../../../linux/pyrope/library/include;../components/base/;../components/video/coda960_video_decoder;../components/video/coda960_video_encoder;../../../../../system/core/include;../../../../../hardware/libhardware/include;../extractor/ffmpeg;../codec/ffmpeg/include;../../../../../frameworks/av/include;../../../../../frameworks/av/media/libstagefright/include;../../../../../frameworks/native/include;../../../../../frameworks/native/include/media/hardware;../../../../../frameworks/native/include/media/openmax;$(ANDROID_INCS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
