--- a/omx/OMX_MSVC_Project/KitKatDevel.props
+++ b/omx/OMX_MSVC_Project/KitKatDevel.props
@@ -2,10 +2,12 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <ANDROID_ROOT>Z:\devel\android\kitkat-mr1</ANDROID_ROOT>
+    <ANDROID_ROOT>Z:\devel\android\lollipop-dev</ANDROID_ROOT>
     <ANDROID_TOOLCHAIN>$(ANDROID_ROOT)\prebuilts\ndk\current\platforms\android-18\arch-arm\usr\include</ANDROID_TOOLCHAIN>
     <ANDROID_KERNEL>$(ANDROID_ROOT)\linux\kernel\kernel-3.4.39\include</ANDROID_KERNEL>
-    <ANDROID_INCS>$(ANDROID_ROOT)\system\core\include;$(ANDROID_ROOT)\frameworks\native\include;$(ANDROID_ROOT)\hardware\libhardware\include;</ANDROID_INCS>
+    <ADNROID_TOOLCHAIN>$(ANDROID_ROOT)\prebuilts\gcc\linux-x86\host\x86_64-linux-glibc2.11-4.6\sysroot\usr\include</ADNROID_TOOLCHAIN>
+    <LIBRARY_INCLUDE>$(ANDROID_ROOT)\linux\platform\s5p6818\library\include</LIBRARY_INCLUDE>
+    <ANDROID_INCS>$(LIBRARY_INCLUDE);$(ANDROID_KERNEL);$(ANDROID_TOOLCHAIN);$(ANDROID_ROOT)\system\core\include;$(ANDROID_ROOT)\frameworks\native\include;$(ANDROID_ROOT)\hardware\libhardware\include;</ANDROID_INCS>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
@@ -19,6 +21,12 @@
     </BuildMacro>
     <BuildMacro Include="ANDROID_KERNEL">
       <Value>$(ANDROID_KERNEL)</Value>
+    </BuildMacro>
+    <BuildMacro Include="ADNROID_TOOLCHAIN">
+      <Value>$(ADNROID_TOOLCHAIN)</Value>
+    </BuildMacro>
+    <BuildMacro Include="LIBRARY_INCLUDE">
+      <Value>$(LIBRARY_INCLUDE)</Value>
     </BuildMacro>
     <BuildMacro Include="ANDROID_INCS">
       <Value>$(ANDROID_INCS)</Value>
